--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Onest:wght@100..900&display=swap");
 @import "tailwindcss";
 @plugin "daisyui";
 
 @theme {
     --font-ubuntu: "Ubuntu", sans-serif;
     --font-kumbh: "Kumbh Sans", sans-serif;
+    --font-Onset: "Onest", sans-serif;
 }
