--- a/src/Pages/Home/trendy.css
+++ b/src/Pages/Home/trendy.css
@@ -1,3 +1,27 @@
+@keyframes fade-in-up {
+    0% {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+.animate-fade-in-up {
+    animation: fade-in-up 1s ease-out both;
+}
+@keyframes fade-in-down {
+    0% {
+        opacity: 0;
+        transform: translateY(-20px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
 .swiper-button-next::after,
 .swiper-button-prev::after {
     color: black !important;
